@@ -1,5 +1,7 @@
 Revision history for Coverage::Server
 
+          - Daemon now has it's own init file template
+
 0.7.1     2016-02-05 14:52:05
           - Fixed casing of dist_name in navigation panel
           - Adjusted horizontal position of text in badge
